2007-09-02  Jean Brefort  <jean.brefort@normalesup.org>
	* configure.in: applied patch from Klaus Heinz fixes #1786288.

2007-07-13  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/openbabel-python.i: Renamed index operator to __getitem__. I
	didn't do this for the other programming languages as I have no idea
	whether this is a valid name, or whether there is an equivalent 'magic
	attribute name' in other languages

2007-07-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/math/vector3.h, include/openbabel/base.h,
	include/openbabel/generic.h, include/openbabel/residue.h: Fix GCC
	compiler warnings with -pedantic. Thanks to Carsten Neihaus.

2007-07-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/Makefile.am, src/Makefile.in: Bump library version for 2.1.1
	release.

2007-07-05  Chris Morley

	* src/formats/inchiformat(WriteMolecule): downgraded the InChI
	message "Tetrahedral stereo info not available" to obInfo, 
	since it arises from the workings of the the opaque OB chirality
	system. Also added the molecule number for identification.
	
	* src/GUI/OBGUI.cpp, tool/babel.cpp: added &std::cout to the
	call to OBConversion::Write() for the APIInterface, because the
	previous NULL value was causing it to be ignored. This meant
	that ---errorlevel wasn't working,  as again found by Noel.
	
2007-07-05  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/mdlformat.cpp (MDLFormat::ReadMolecule): Add
	additional error and warning messages, including a check if the
	atom/bond block doesn't work. Fixes crash reported by Joe Bedell,
	Sigma-Aldrich.

	* Makefile.am, Makefile.in: Skip INSTALL.Windows, deleted by
	Chris.

2007-07-04  Chris Morley

	* src/finger3.cpp: Trim firts line which decided format of
	patterns.txt. In Windows there was trailing \r which caused
	none of the patterns to be read, as found by Noel.
	
2007-07-04  Chris Morley

	* src/formats/smilesformat.cpp(CreateSmiString): call